<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".SignInActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn"
        />
    <TextView
        android:id="@+id/tvDangKy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chuacotaikhoan"
        android:textSize="15dp"
        />


</LinearLayout>