<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/username"/>
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_your_name"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_avatar"
            android:layout_centerVertical="true"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/btnChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_files_image" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_alignParentLeft="true"
            android:textColor="@color/red"
            android:drawableRight="@drawable/close_thick_32"
            android:drawableTint="@color/red"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/ic_save_profile"/>
    </RelativeLayout>

</LinearLayout>