<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SaveActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_image"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="20dp"
        android:textSize="26sp" />
    <ImageView
        android:id="@+id/imgReview"
        android:layout_width="match_parent"
        android:layout_height="400dp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/layoutLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnSaveLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_bottom"
                app:tint="@color/green"
                app:srcCompat="@drawable/ic_save_32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_to_your_device"
                android:textSize="20sp" />

        </LinearLayout>
        <Space
            android:layout_width="70dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/layoutCloud">
            <ImageButton
                android:id="@+id/btnSaveCloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_bottom"
                app:tint="@color/blue"
                app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_to_cloud"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>