<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titlebar"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_button_bottom"
            app:srcCompat="@drawable/ic_more_32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="string/detail"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/shape_button_bottom"
            app:srcCompat="@drawable/ic_back_32" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="53dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_post_layout" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:paddingLeft="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/comment" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_menu"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <TextView
            android:id="@+id/tvDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_this_photo"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/footer"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="120dp"
            android:hint="@string/write_a_comment"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:paddingHorizontal="10sp"
            android:textColorHint="@color/hint_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnAddPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_bottom"
                app:srcCompat="@drawable/image_plus"
                app:tint="@color/green" />

            <ImageButton
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_bottom"
                app:srcCompat="@drawable/ic_send"
                app:tint="@color/blue" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>